<resources>
    <string name="app_name">Agenda Online</string>

    <!--MAIN ACTIVITY-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--Actividad Registo-->
    <string name="crearCuentaTxt">Crear una cuenta</string>
    <string name="nombreEt">Nombre completo</string>
    <string name="CorreoEt">Correo Electronico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar Contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="tengounaCuentaTxt">Tengo una Cuenta</string>

    <!--Menu Principal-->
    <string name="Cerrarsesion">Salir</string>

    <!--Activdad Login-->
    <string name="IniciarSesionTxt">Iniciar sesion</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="usuarionuevotxt">No tienes una cuenta?. Registrate</string>

    <!---Menu principal-->
    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>

    <!--Agregar Notas -->
    <string name="Uid_usuario">Uid de usuario</string>
    <string name="correo_usuario">Correo de Usuario</string>
    <string name="fecha_horaactual">Fecha y hora actual</string>
    <string name="title">Titulo</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Calendario">Calendario</string>
    <string name="Fecha">00/00/000</string>
    <string name="Estado">No finalizado</string>
</resources>